0.12.0.dev/_sources/reference/dipy.io.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`io`
=========
.. automodule:: dipy.io

.. currentmodule:: dipy.io
.. autosummary::

   Dpy
   load_pickle
   orientation_from_string
   orientation_to_string
   ornt_mapping
   read_bvals_bvecs
   read_bvec_file
   reorient_on_axis
   reorient_vectors
   save_pickle

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.bvectxt`
-------------------------
.. automodule:: dipy.io.bvectxt

.. currentmodule:: dipy.io.bvectxt
.. autosummary::

   orientation_from_string
   orientation_to_string
   ornt_mapping
   read_bvec_file
   reorient_on_axis
   reorient_vectors
   splitext

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.dpy`
---------------------
.. automodule:: dipy.io.dpy

.. currentmodule:: dipy.io.dpy
.. autosummary::

   Dpy
   LooseVersion
   doctest_skip_parser
   optional_package

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.gradients`
---------------------------
.. automodule:: dipy.io.gradients

.. currentmodule:: dipy.io.gradients
.. autosummary::

   read_bvals_bvecs
   splitext

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.image`
-----------------------
.. automodule:: dipy.io.image

.. currentmodule:: dipy.io.image
.. autosummary::

   load_nifti
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.pickles`
-------------------------
.. automodule:: dipy.io.pickles

.. currentmodule:: dipy.io.pickles
.. autosummary::

   load_pickle
   save_pickle

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.trackvis`
--------------------------
.. automodule:: dipy.io.trackvis

.. currentmodule:: dipy.io.trackvis
.. autosummary::

   save_trk

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`io.vtk`
---------------------
.. automodule:: dipy.io.vtk

.. currentmodule:: dipy.io.vtk
.. autosummary::

   load_polydata
   optional_package
   save_polydata
   set_input
   setup_module


.. currentmodule:: dipy.io


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle

orientation_from_string
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_from_string

orientation_to_string
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_to_string

ornt_mapping
~~~~~~~~~~~~

.. autofunction:: ornt_mapping

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

read_bvec_file
~~~~~~~~~~~~~~

.. autofunction:: read_bvec_file

reorient_on_axis
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_on_axis

reorient_vectors
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_vectors

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle


.. currentmodule:: dipy.io.bvectxt

orientation_from_string
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_from_string

orientation_to_string
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: orientation_to_string

ornt_mapping
~~~~~~~~~~~~

.. autofunction:: ornt_mapping

read_bvec_file
~~~~~~~~~~~~~~

.. autofunction:: read_bvec_file

reorient_on_axis
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_on_axis

reorient_vectors
~~~~~~~~~~~~~~~~

.. autofunction:: reorient_vectors

splitext
~~~~~~~~

.. autofunction:: splitext


.. currentmodule:: dipy.io.dpy


:class:`Dpy`
~~~~~~~~~~~~


.. autoclass:: Dpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LooseVersion`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LooseVersion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

doctest_skip_parser
~~~~~~~~~~~~~~~~~~~

.. autofunction:: doctest_skip_parser

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package


.. currentmodule:: dipy.io.gradients

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

splitext
~~~~~~~~

.. autofunction:: splitext


.. currentmodule:: dipy.io.image

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.io.pickles

load_pickle
~~~~~~~~~~~

.. autofunction:: load_pickle

save_pickle
~~~~~~~~~~~

.. autofunction:: save_pickle


.. currentmodule:: dipy.io.trackvis

save_trk
~~~~~~~~

.. autofunction:: save_trk


.. currentmodule:: dipy.io.vtk

load_polydata
~~~~~~~~~~~~~

.. autofunction:: load_polydata

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

save_polydata
~~~~~~~~~~~~~

.. autofunction:: save_polydata

set_input
~~~~~~~~~

.. autofunction:: set_input

setup_module
~~~~~~~~~~~~

.. autofunction:: setup_module

